total-price button added and styled a bit. aside overflow-y-problem fixed

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   width: 100%;
   max-width: 1920px;
   margin: 0;
+  margin-top: 60px;
 }
 
 .header-section {
@@ -31,13 +32,17 @@
   box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.266);
 }
 
+.all-products {
+  position: relative;
+}
+
 .shopping-cart {
   background-color: rgb(218, 218, 218);
   width: 30vw;
   position: sticky;
   top: 60px;
-  height: calc(100vh - 120px);
-  /* overflow-y: auto; */
+  height: calc(100vh - 60px);
+  overflow-y: auto;
   border: 2px solid rgb(28, 111, 86);
 }
 
@@ -93,6 +98,7 @@
 .cart-products-container {
   display: flex;
   flex-direction: column;
+  flex-grow: 1;
 }
 
 .product-price-plus-minus-container {
@@ -124,4 +130,13 @@
   align-items: center;
   text-align: center;
   margin-top: 100px;
+}
+
+.total-price-container {
+  position: sticky;
+  bottom: 50px;
+  text-align: center;
+  z-index: 10;
+  display: flex;
+  justify-content: center;
 }
