--- a/styles/assets.css
+++ b/styles/assets.css
@@ -99,3 +99,13 @@ aside h4 {
   height: auto;
   width: 26px;
 }
+
+.total-price-button {
+  height: 50px;
+  width: auto;
+  background-color: rgb(2, 134, 0);
+  color: white;
+  cursor: pointer;
+  border-radius: 16px;
+  font-size: 1.2rem;
+}
