--- a/styles/standard.css
+++ b/styles/standard.css
@@ -26,11 +26,11 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* position: fixed;
+  position: fixed;
   z-index: 10;
   top: 0;
   left: 0;
-  right: 0; */
+  right: 0;
   z-index: 10;
   height: 60px;
   background-color: rgb(1, 58, 0);
